--- a/frontend/src/lib/router/survey/survey.component.html
+++ b/frontend/src/lib/router/survey/survey.component.html
@@ -2,14 +2,14 @@
 
 <div *ngIf="this.errorMessage == undefined && !this.submited && this.loaded">
 <div id="head">
-  <h1>{{this.vote.name}}</h1>
+  <h1>{{this.poll.name}}</h1>
 </div>
 
 <div id="body">
 
   <form [formGroup]="surveyForm" >
     <ul>
-      <li *ngFor="let question of this.vote.questions">
+      <li *ngFor="let question of this.poll.questions">
         <surveyQuestion
           [question]="question"
           [parentForm]="surveyForm"
