--- a/frontend/src/lib/router/mainmenu/mainmenu.component.css
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.css
@@ -106,6 +106,24 @@
   transition: .4s;
 }
 
+.adminGenerator .txt_field .info_txt{
+  color: #000000;
+  font-size: 15px;
+  position: absolute;
+  top: 20%;
+  left: -5%;
+  text-align: center;
+  pointer-events: none;
+  transition: .4s;
+  font-weight: 600;
+}
+
+.adminGenerator .txt_field .info_txt #theicon2{
+  vertical-align: middle;
+  color: #adadad;
+}
+
+
 .adminGenerator .txt_field .invalidPasswordLength{
   color: red;
   font-size: 15px;
@@ -194,89 +212,23 @@
   text-align: center;
   font-size: 40px;
   position: fixed;
-  right: 32.5%;
+  right: 17.5%;
   background-color: rgba(239, 238, 238, 1);
-  width: 35%;
-  height: 30%;
+  width: 65%;
+  height: 55%;
   top: 25%;
   border: 3px solid #ff8200;
   border-radius: 15px 15px 15px 15px;
 }
 
-.deleteAdmin .txt_field{
-  position: relative;
-  top: 5%;
-  border-bottom: 2px solid #adadad;
-  margin: 50px 0;
-  margin-left: 30px;
-  margin-right: 30px;
-}
-
-.deleteAdmin .txt_field input{
-  width: 100%;
-  padding:0 5px;
-  height: 40px;
-  font-size: 16px;
-  border: none;
-  background: none;
-  outline: none;
-}
-
-/*Username and Password label*/
-.deleteAdmin .txt_field label{
-  position: absolute;
-  top: 50%;
-  left: 5px;
-  color: #adadad;
-  transform: translateY(-50%);
-  font-size: 16px;
-  pointer-events: none;
-  transition: .4s;
-}
-
-.deleteAdmin .txt_field span::before{
-  content: "";
-  position: absolute;
-  top: 40px;
-  left: 0;
-  width: 0%;
-  height: 2px;
-  background: #2691d9;
-  transition: .4s;
-}
-
-.deleteAdmin .txt_field input:focus~label,
-.deleteAdmin input:valid ~label{
-  top: -5px;
-  color: #2691d9;
-}
-
-.deleteAdmin .txt_field input:focus~span::before,
-.deleteAdmin input:valid ~span::before{
-  width: 100%;
-}
-
-
-
-.deleteAdmin .delete{
-  color: white;
-  position: fixed;
-  top: 47%;
-  right: 34%;
-  width: 10%;
-}
-
 .deleteAdmin .cancel{
   color: white;
   position: fixed;
-  top: 47%;
-  left: 34%;
+  top: 73%;
+  left: 45%;
   width: 10%;
 }
-
 /*DELETE WINDOW*/
-
-
 
 
 
@@ -334,6 +286,22 @@
   transition: .4s;
 }
 
+.changePassword .txt_field .info_txt{
+  color: #adadad;
+  font-size: 15px;
+  position: absolute;
+  top: -100%;
+  text-align: center;
+  pointer-events: none;
+  transition: .4s;
+  font-weight: 600;
+}
+
+.changePassword .txt_field .info_txt #theicon{
+  vertical-align: middle;
+  color: #adadad;
+}
+
 
 .changePassword .txt_field .invalidPasswordLength{
   color: red;
@@ -341,7 +309,6 @@
   position: absolute;
   top: 130%;
   left: 5px;
-
   pointer-events: none;
   transition: .4s;
 }
@@ -588,4 +555,26 @@
   top:50%;
    left: 50%;
 }
+
+
+
+
+
+ /*
+  <div class="txt_field">
+    <input type="text" required
+           [value]="this.deleteadminadress"
+           (change)="setUsernameoftoDeleteAdmin($event)"
+    >
+    <span></span>
+    <label>Username</label>
+  </div>
+
+  <div class="delete" >
+    <button mat-flat-button color="primary" (click)="DeleteAdmin()">Delete </button>
+  </div>
+  <div class="cancel">
+    <button mat-flat-button color="primary" (click)="hideDeleteAdmin()">Cancel </button>
+  </div>
+  */
 
