--- a/frontend/src/lib/router/login/login.component.html
+++ b/frontend/src/lib/router/login/login.component.html
@@ -10,7 +10,7 @@
     <!-- Loginwindow -->
     <div class="loginfield" >
       <div id="loginwindow">
-        <div class="headline">Login to your account</div>
+        <div class="loginheadline">Login to your account</div>
         <div class="txt_field">
           <input type="text" required
                  [value]="this.userEmail"
