--- a/frontend/src/lib/userlistmodule/usercontainer/UserContainer.component.css
+++ b/frontend/src/lib/userlistmodule/usercontainer/UserContainer.component.css
@@ -10,12 +10,14 @@
   top: 10%;
   position: absolute;
   left: 15%;
+  font-size: 20px;
 }
 
 .userContainer .usercontainerHeader #sysadmin{
   top: 10%;
   position: absolute;
-  left: 50%;
+  left: 45%;
+  font-size: 20px;
 }
 
 .userContainer #body{
@@ -72,5 +74,20 @@
   bottom: 5%;
   right: 10%;
   cursor: pointer;
+}
+
+
+#sucessdeletedicon {
+  position: fixed;
+  font-size: 100px;
+  top:50%;
+  left: 47%;
+  color: springgreen;
+}
+#faildeleteicon {
+  position: fixed;
+  font-size: 100px;
+  top:47%;
+  left: 50%;
 }
 
