new modern Design

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,7 +8,7 @@
 <div class="toolbar" role="banner">
 
   <div class="text" >
-    <input type="image" src="../assets/FHWS_Logo_Vote.png" width="150px" height="15%">
+    <input type="image" src="../assets/FHWS_Logo_Vote2.png" width="150px" height="15%">
   </div>
 
 
