--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -18,7 +18,7 @@
   height: 60px;
   display: flex;
   align-items: center;
-  background-color: #ff8200;
+  background-color: #ffffff;
   color: white;
   font-weight: 600;
 }
