--- a/frontend/src/lib/router/mainmenu/mainmenu.component.html
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.html
@@ -8,7 +8,7 @@
 <div class="taskbar">
 
   <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="OPTIONS">
-    <mat-icon>menu</mat-icon>
+    <mat-icon id="menuicon">menu</mat-icon>
     OPTIONS
   </button>
   <mat-menu #menu="matMenu">
