--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 .body{
-  background-image: url("assets/background-vote2.png");
+  /*background-image: url("assets/background-vote2.png");
+   */
+  background-color: rgb(233,238,240);
   background-size: cover;
   background-repeat: repeat;
   background-position: center center;
