updated Login and frontend authorization system

--- a/frontend/src/lib/router/login/login.component.html
+++ b/frontend/src/lib/router/login/login.component.html
@@ -37,7 +37,7 @@
         </div>
 
 
-        <input type="submit" value="Login"  (click)="submitlogin()">
+        <input type="submit" value="Login"  (click)="submitlogin($event)">
         <div class="loading" *ngIf="showloadingstatus">
           <mat-spinner [diameter]="40"></mat-spinner>
         </div>
