--- a/frontend/src/lib/polllistmodule/pollcontainer/PollContainer.component.html
+++ b/frontend/src/lib/polllistmodule/pollcontainer/PollContainer.component.html
@@ -23,7 +23,7 @@
 
   <div class="sureDeletePoll" *ngIf="sureDeletePoll">
 
-    <h1 mat-dialog-title>Info</h1>
+    <div class="headline">Info</div>
     <div mat-dialog-content>Are you sure you want to delete Poll?</div>
     <div class="delete_btn"mat-dialog-actions>
       <button mat-flat-button color="primary" (click)="yessDelete()">Delete </button>
