--- a/frontend/src/lib/router/mainmenu/mainmenu.component.css
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.css
@@ -6,20 +6,17 @@
   color: white;
 }
 
-.listwindow  {
+.listwindow {
   text-align: center;
   font-size: 40px;
   position: fixed;
   right: 15%;
-  background-color: rgba(239, 238, 238, 1);
-  border: 3px solid #ff8200;
+  background-color: rgb(255, 255, 255);
   border-radius: 10px 10px 10px 10px;
   width: 70%;
   height: 80%;
   top: 15%;
-
 }
-
 .headline{
   height: 35px;
   background:  #ff8200;
@@ -65,12 +62,14 @@
   font-size: 40px;
   position: fixed;
   right: 32.5%;
-  background-color: rgba(239, 238, 238, 1);
+  background-color: rgb(255, 255, 255);
+  border-right: 2px solid #2c2c2c;
+  border-left: 2px solid #2c2c2c;
+  border-bottom: 2px solid #2c2c2c;
   width: 35%;
   height: 55%;
   top: 25%;
-  border: 3px solid #ff8200;
-  border-radius: 15px 15px 15px 15px;
+  border-radius: 10px 10px 10px 10px;
 }
 
 .adminGenerator .txt_field{
@@ -210,12 +209,14 @@
   font-size: 40px;
   position: fixed;
   right: 17.5%;
-  background-color: rgba(239, 238, 238, 1);
+  background-color: rgb(255, 255, 255);
+  border-right: 2px solid #2c2c2c;
+  border-left: 2px solid #2c2c2c;
+  border-bottom: 2px solid #2c2c2c;
   width: 65%;
   height: 55%;
   top: 25%;
-  border: 3px solid #ff8200;
-  border-radius: 15px 15px 15px 15px;
+  border-radius: 10px 10px 10px 10px;
 }
 
 .deleteAdmin .cancel{
@@ -235,12 +236,14 @@
   font-size: 40px;
   position: fixed;
   right: 32.5%;
-  background-color: rgba(239, 238, 238, 1);
+  background-color: rgb(255, 255, 255);
+  border-right: 2px solid #2c2c2c;
+  border-left: 2px solid #2c2c2c;
+  border-bottom: 2px solid #2c2c2c;
   width: 35%;
   height: 30%;
   top: 25%;
-  border: 3px solid #ff8200;
-  border-radius: 15px 15px 15px 15px;
+  border-radius: 10px 10px 10px 10px;
 }
 
 .changePassword .txt_field {
@@ -359,12 +362,14 @@
   font-size: 40px;
   position: fixed;
   right: 32.5%;
-  background-color: rgba(239, 238, 238, 1);
+  background-color: rgb(255, 255, 255);
+  border-right: 2px solid #2c2c2c;
+  border-left: 2px solid #2c2c2c;
+  border-bottom: 2px solid #2c2c2c;
   width: 35%;
   height: 30%;
   top: 25%;
-  border: 3px solid #ff8200;
-  border-radius: 15px 15px 15px 15px;
+  border-radius: 10px 10px 10px 10px;
 }
 
 .changeUsername .txt_field {
@@ -455,13 +460,15 @@
   text-align: center;
   position: fixed;
   right: 40%;
-  background-color: rgba(239, 238, 238, 1);
+  background-color: rgb(255, 255, 255);
   width: 20%;
   top: 40%;
   height: 20%;
   color: black;
-  border: 3px solid #ff8200;
-  border-radius: 15px 15px 15px 15px;
+  border-right: 2px solid #2c2c2c;
+  border-left: 2px solid #2c2c2c;
+  border-bottom: 2px solid #2c2c2c;
+  border-radius: 10px 10px 10px 10px;
 }
 
 .sureDelete .cancel_btn{
@@ -484,13 +491,15 @@
   text-align: center;
   position: fixed;
   right: 40%;
-  background-color: rgba(239, 238, 238, 1);
+  background-color: rgb(255, 255, 255);
   width: 20%;
   top: 40%;
   height: 20%;
   color: black;
-  border: 3px solid #ff8200;
-  border-radius: 15px 15px 15px 15px;
+  border-right: 2px solid #2c2c2c;
+  border-left: 2px solid #2c2c2c;
+  border-bottom: 2px solid #2c2c2c;
+  border-radius: 10px 10px 10px 10px;
 }
 
 .sureChangePassword .cancel_btn{
@@ -513,13 +522,15 @@
   text-align: center;
   position: fixed;
   right: 40%;
-  background-color: rgba(239, 238, 238, 1);
+  background-color: rgb(255, 255, 255);
   width: 20%;
   top: 40%;
   height: 20%;
   color: black;
-  border: 3px solid #ff8200;
-  border-radius: 15px 15px 15px 15px;
+  border-right: 2px solid #2c2c2c;
+  border-left: 2px solid #2c2c2c;
+  border-bottom: 2px solid #2c2c2c;
+  border-radius: 10px 10px 10px 10px;
 }
 
 .sureChangeUsername .cancel_btn{
