--- a/frontend/src/lib/userlistmodule/user/User.component.css
+++ b/frontend/src/lib/userlistmodule/user/User.component.css
@@ -3,7 +3,7 @@
   left: 7.5%;
   width: 85%;
   height: 40px;
-  background-color: white;
+  background-color: #e5e5e5;
   display: flex;
   align-items: center;
   border-radius: 5px;
