--- a/frontend/src/lib/userlistmodule/usercontainer/UserContainer.component.html
+++ b/frontend/src/lib/userlistmodule/usercontainer/UserContainer.component.html
@@ -24,7 +24,7 @@
 
   <div class="sureDeleteUser" *ngIf="sureDeleteUsers">
 
-    <h1 mat-dialog-title>Info</h1>
+    <div class="headline">Info</div>
     <div mat-dialog-content>Are you sure you want to delete User?</div>
     <div class="delete_btn"mat-dialog-actions>
       <button mat-flat-button color="primary" (click)="yessDelete()">Delete </button>
