--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -19,7 +19,7 @@
   display: flex;
   align-items: center;
   background-color: #ffffff;
-  color: white;
+  color: #ff8000;
   font-weight: 600;
 }
 
