--- a/frontend/src/lib/polllistmodule/pollcontainer/PollContainer.component.css
+++ b/frontend/src/lib/polllistmodule/pollcontainer/PollContainer.component.css
@@ -53,8 +53,21 @@
   background-color: rgba(239, 238, 238, 1);
   height: 20%;
   color: black;
-  border: 3px solid #ff8200;
-  border-radius: 15px 15px 15px 15px;
+  border-right: 2px solid #2c2c2c;
+  border-left: 2px solid #2c2c2c;
+  border-bottom: 2px solid #2c2c2c;
+  border-radius: 10px 10px 10px 10px;
+}
+
+
+.sureDeletePoll .headline{
+  height: 35px;
+  background:  #ff8200;
+  border-radius: 7px 7px 0px 0px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-weight: 600;
+  font-size: 25px;
+  color: white;
 }
 
 .sureDeletePoll .cancel_btn{
