fixed getPollById and other stuff

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -12,7 +12,7 @@
   </div>
 
 
-  <div id="userfield" >
+  <div id="userfield" routerLink="/main">
     {{isLoggedIn()}}
     <div class="usericon" *ngIf="showUsericon">
       <mat-icon id="icon">person</mat-icon>
