--- a/frontend/src/lib/userlistmodule/usercontainer/UserContainer.component.css
+++ b/frontend/src/lib/userlistmodule/usercontainer/UserContainer.component.css
@@ -55,7 +55,7 @@
   width: 20%;
   top: 40%;
   font-size: 15px;
-  background-color: rgba(239, 238, 238, 1);
+  background-color: rgb(255, 255, 255);
   height: 20%;
   color: black;
   border-right: 1px solid #2c2c2c;
