--- a/frontend/src/lib/router/PollResult/pollResult.component.css
+++ b/frontend/src/lib/router/PollResult/pollResult.component.css
@@ -17,9 +17,8 @@
   cursor: pointer;
 }
 #chart {
-  max-width: 70%;
-  margin: 50px;
-  margin-left: 150px;
+  max-width: 40%;
+  margin: 50px 50px 20px 450px;
 }
 
 
@@ -37,6 +36,7 @@
   top: 15%;
 }
 
+
 .headline{
   height: 60px;
   background: #2691d9;
@@ -44,10 +44,12 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: white;
   font-weight: 600;
-  font-size: 25px;
-  text-align: center;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-#pollnumber{
+#pollname{
   font-size: 20px;
   font-weight: 400;
   margin: 10px;
@@ -69,8 +71,50 @@
 
   align-items:flex-end;
 }
+#individualList ul{
+  align-items: center;
+  position: relative;
+  background-color: transparent;
+  height: 50vh;
+  margin-bottom: 20px;
+}
+#arrows{
+  position: fixed;
+  left: 50%;
+  right: 50%;
+  top: 90%;
+}
 
 
+#individualList ul li {
+  overflow: auto;
+  background-color: transparent;
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 10px;
+}
+#answer{
+  position: relative;
+  left: 5%;
+  width: 85%;
+  min-height: 70px;
+  background-color: #e5e5e5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  word-wrap: break-word;
+  border-radius: 5px;
+  transition: box-shadow 0.1s;
+}
+
+.resultwindow #body{
+  position: relative;
+  overflow-x: hidden;
+  height: 30%;
+  background-color: transparent;
+  top: 10vh;
+  color: transparent;
+}
 
 
 .resultwindow .Info{
