--- a/frontend/src/lib/router/login/login.component.css
+++ b/frontend/src/lib/router/login/login.component.css
@@ -130,10 +130,10 @@
   width: 100%;
   top: 255%;
   text-align: center;
-  color: #ff0000;
+  color: rgb(207,68,73);
   font-size: 16px;
   pointer-events: none;
-
+background-color: rgb(254,234,235);
 }
 
 .loginfield #loginwindow .txt_field .loginFailed #serverproblemicon{
