--- a/frontend/src/lib/router/PollResult/pollResult.component.css
+++ b/frontend/src/lib/router/PollResult/pollResult.component.css
@@ -28,9 +28,8 @@
   position: fixed;
   place-content: center;
   right: 15%;
-  background-color: rgba(239, 238, 238, 1);
-  border: 3px solid #2691d9;
-  border-radius: 15px 15px 15px 15px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px 10px 10px 10px;
   width: 70%;
   height: 80%;
   top: 15%;
@@ -64,10 +63,10 @@
 .returnToMainButton {
   text-align: center;
   position: absolute;
-  left: 5%;
+  left: 2%;
   width: 7%;
   height: 7%;
-  bottom: 5%;
+  bottom: 2%;
 
   align-items:flex-end;
 }
@@ -130,13 +129,16 @@
   text-align: center;
   position: fixed;
   right: 40%;
-  background-color: rgba(239, 238, 238, 1);
+  background-color: rgb(255, 255, 255);
   width: 30%;
   height: 30%;
   top: 40%;
   color: black;
-  border: 3px solid #ff8200;
-  border-radius: 15px 15px 15px 15px;
+  border-right: 1px solid #2c2c2c;
+  border-left: 1px solid #2c2c2c;
+  border-bottom: 1px solid #2c2c2c;
+  box-shadow: 0 0 0.5em #000000;
+  border-radius: 10px 10px 10px 10px;
   font-size: 20px;
   font-weight: bolder;
 }
