--- a/frontend/src/lib/router/PollResult/pollResult.component.html
+++ b/frontend/src/lib/router/PollResult/pollResult.component.html
@@ -77,7 +77,7 @@
 </div>
 
 <div class="returnToMainButton">
-  <input type="image" src="../../assets/returnToMain_btn.png" width="125%" height="125%" routerLink="/main"/>
+  <button mat-flat-button  color="primary" routerLink="/main"><mat-icon>arrow_back_ios</mat-icon>RETURN TO MAIN</button>
 </div>
 
 
